--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@ body {
 
 .centralized {
     width: 80%;
-    marign-bottom: 5%;
     margin-left: 10%;
     margin-top: 5%;
 }
@@ -16,20 +15,24 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 h1 {
-    font-size: 3em;
+    font-size: 5vh;
     background-color: #e29578;
     border-radius: 20px;
     padding: 20px;
 }
 
 h2 {
-    font-size: 1em;
+    font-size: 2vh;
     color: rgb(194, 194, 194);
 }
 
+p {
+    font-size: 1.5vh;
+}
+
 img {
-    width: 250px;
-    height: auto;
+    width: auto;
+    height: 30vh;
     border-radius: 20%;
     margin-top: 90px;
     margin-bottom: 90px;
